--- a/People.html
+++ b/People.html
@@ -30,7 +30,11 @@
 <td align="left"><p>Jinxin Zhou<br /></p>
 <p>MS, UMich; BS, HUST<br /></p>
 <ul>
-<li><p>Jinxin Zhou*, Xiao Li*, Tianyu Ding, Chong You, Qing Qu, and Zhihui Zhu, “<a href="https://proceedings.mlr.press/v162/zhou22c/zhou22c.pdf">On the Optimization
+<li><p>J. Zhou, C. You, X. Li, K. Liu, S. Liu, Q. Qu, and Z. Zhu, &lsquo;&lsquo;Are All Losses Created Equal: A Neural Collapse Perspective," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
+</li>
+</ul>
+<ul>
+<li><p>J. Zhou*, X. Li*, T. Ding, C. You, Q. Qu, and Z. Zhu, “<a href="https://proceedings.mlr.press/v162/zhou22c/zhou22c.pdf">On the Optimization
 Landscape of Neural Collapse under MSE Loss: Global Optimality with Unconstrained
 Features</a>,” <i>International Conference in Machine Learning (ICML)</i>, 2022. (acceptance
 rate = 20%)</p>
@@ -46,7 +50,7 @@ rate = 20%)</p>
 <td align="left"><p>Zhen Qin<br /></p>
 <p>MS, SEU; BS, LDU<br /></p>
 <ul>
-<li><p>Z. Qin, A. Lidiak, Z. Gong, G. Tang, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.04327">Error Analysis of Tensor-Train Cross Approximation</a>,", preprint, 2022.</p>
+<li><p>Z. Qin, A. Lidiak, Z. Gong, G. Tang, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.04327">Error Analysis of Tensor-Train Cross Approximation</a>," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
 </li>
 </ul>
 <ul>
@@ -123,7 +127,7 @@ rate = 20%)</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-03 16:32:20 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-17 15:46:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
