--- a/Publications.html
+++ b/Publications.html
@@ -29,10 +29,6 @@
 <p><a href="https://scholar.google.com/citations?user=gmSwszcAAAAJ&amp;hl=zh-CN&amp;oi=sra">My Google Scholar Profile</a></p>
 <h2>Preprints (* indicates equal contribution)</h2>
 <ul>
-<li><p>Z. Qin, A. Lidiak, Z. Gong, G. Tang, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.04327">Error Analysis of Tensor-Train Cross Approximation</a>,", preprint, 2022.</p>
-</li>
-</ul>
-<ul>
 <li><p>A. Lidiak, C. Jameson, Z. Qin, G. Tang, M. B. Wakin, Z. Zhu, and Z. Gong, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.06397">Quantum state tomography with tensor train cross approximation</a>,", preprint, 2022.</p>
 </li>
 </ul>
@@ -43,7 +39,7 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
-<li><p>J. Sulam, C. You, and Z. Zhu, &lsquo;&lsquo;<a href="https://www.jmlr.org/papers/volume23/20-1360/20-1360.pdf">Recovery and Generalization in Over-Realized Dictionary Learning</a>," vol. 23, no. 135, pp. 1-23, 2022.</p>
+<li><p>J. Sulam, C. You, and Z. Zhu, &lsquo;&lsquo;<a href="https://www.jmlr.org/papers/volume23/20-1360/20-1360.pdf">Recovery and Generalization in Over-Realized Dictionary Learning</a>," <i>Journal of Machine Learning Research</i>, vol. 23, no. 135, pp. 1-23, 2022.</p>
 </li>
 </ul>
 <ul>
@@ -140,7 +136,23 @@
 </ul>
 <h2>Conference Papers&ndash;Machine Learning</h2>
 <ul>
-<li><p>Jinxin Zhou*, Xiao Li*, Tianyu Ding, Chong You, Qing Qu, and Zhihui Zhu, “<a href="https://proceedings.mlr.press/v162/zhou22c/zhou22c.pdf">On the Optimization
+<li><p>J. Zhou, C. You, X. Li, K. Liu, S. Liu, Q. Qu, and Z. Zhu, &lsquo;&lsquo;Are All Losses Created Equal: A Neural Collapse Perspective," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
+</li>
+</ul>
+<ul>
+<li><p>Z. Qin, A. Lidiak, Z. Gong, G. Tang, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.04327">Error Analysis of Tensor-Train Cross Approximation</a>," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
+</li>
+</ul>
+<ul>
+<li><p>C. Yaras, P. Wang, Z. Zhu, L. Balzano, and Qing Qu, &lsquo;&lsquo;Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
+</li>
+</ul>
+<ul>
+<li><p>X. Dai, M. Li,&hellip;, Z. Zhu, C. You, and Yi Ma, &lsquo;&lsquo;Revisiting Sparse Convolutional Model for Visual Recognition," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
+</li>
+</ul>
+<ul>
+<li><p>J. Zhou*, X. Li*, T. Ding, C. You, Q. Qu, and Z. Zhu, “<a href="https://proceedings.mlr.press/v162/zhou22c/zhou22c.pdf">On the Optimization
 Landscape of Neural Collapse under MSE Loss: Global Optimality with Unconstrained
 Features</a>,” <i>International Conference in Machine Learning (ICML)</i>, 2022. (acceptance
 rate = 20%)</p>
@@ -347,7 +359,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-03 16:02:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-17 15:46:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
