--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <h2>News:</h2>
 <ul>
+<li><p>[Sep 2021] Four papers accetped to <a href="https://nips.cc/">NeurIPS 2022</a>. </p>
+</li>
+</ul>
+<ul>
 <li><p>[August 2022] Our group joined the Department of Computer Science and Engineering at The Ohio State University.</p>
 </li>
 </ul>
@@ -178,7 +182,7 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-03 17:23:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-17 15:46:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
