--- a/Teaching.html
+++ b/Teaching.html
@@ -25,6 +25,10 @@
 <h1>Teaching</h1>
 <h2>Ohio State University</h2>
 <ul>
+<li><p>Spring 23: <a href="https://sites.google.com/view/osu-cse-5539-sp23-zhu">Deep Learning: Models, Theory and Applications (CSE 5539)</a></p>
+</li>
+</ul>
+<ul>
 <li><p>Autumn 22: <a href="https://sites.google.com/view/osu-cse-5523-au22-zhu">Machine Learning (CSE 5523)</a></p>
 </li>
 </ul>
@@ -53,7 +57,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-03 16:12:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-17 22:44:02 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
