--- a/index.html
+++ b/index.html
@@ -47,9 +47,25 @@ Email: zhu.3440@osu.edu</p>
 <li><p><b>Optimization</b>: Nonconvex geometric analysis; distributed optimization; the design, analysis, and implementation of large-scale optimization algorithms for engineering problems.<br /></p>
 </li>
 </ul>
-<h2>News:</h2>
+<h2>News: </h2>
 <ul>
-<li><p>[Sep 2021] Four papers accetped to <a href="https://nips.cc/">NeurIPS 2022</a>. </p>
+<li><p>[Jan 2023] Co-organized and gave a <a href="https://buckeyemailosu-my.sharepoint.com/:b:/g/personal/zhu_3440_osu_edu/ES8L3-DSGThGjIV6FenNXIoBwDI-_SCWdFONoebTie17zA?e=099OWe">tutorail</a> at the 3rd SLowDNN Workshop at MBZUAI, Abu Dhabi, MBZUAI. </p>
+</li>
+</ul>
+<ul>
+<li><p>[Dec 2022] Received <a href="https://quantum.osu.edu/">CQISE</a> Partnership Seed Award (PSA) and will collaborate with Brian Kirby (ARL) on quantum network. </p>
+</li>
+</ul>
+<ul>
+<li><p>[Dec 2022] Invited to serve as area chair at ICML 2023.</p>
+</li>
+</ul>
+<ul>
+<li><p>[Nov 2022] Elected to serve on the Technical Committee of the Machine Learning for Signal Processing (MLSP TC) under the IEEE Signal Processing Society. </p>
+</li>
+</ul>
+<ul>
+<li><p>[Sep 2022] Four papers accetped to <a href="https://nips.cc/">NeurIPS 2022</a>. </p>
 </li>
 </ul>
 <ul>
@@ -182,7 +198,7 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-17 15:46:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-17 22:44:54 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
