--- a/People.html
+++ b/People.html
@@ -26,8 +26,22 @@
 <h2>Current Members</h2>
 <h3>PhD Students</h3>
 <table class="imgtable"><tr><td>
+<img src="pic/group/jiachen.jpg" alt="alt text" width="150px" height="214px" />&nbsp;</td>
+<td align="left"><p><a href="http://www.jiachenjiang.com/">Jiachen Jiang</a><br /></p>
+<p>MS, UMich; BS, Beihang<br /></p>
+<ul>
+<li><p>J. Jiang, J. Zhou, P. Wang, Q. Qu, D. Mixon, C. You, Z. Zhu, Generalized Neural Collapse for a Large Number of Classes, 2023.</p>
+</li>
+</ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="pic/group/hamoud.jpg" alt="alt text" width="150px" height="150px" />&nbsp;</td>
+<td align="left"><p><a href="https://scholar.google.com/citations?user=uFjJOYgAAAAJ&amp;hl=en">Hamoud Alhazmi</a><br /></p>
+<p>MS & BS, University of Canberra<br /></p>
+</td></tr></table>
+<table class="imgtable"><tr><td>
 <img src="pic/group/jinxin.png" alt="alt text" width="150px" height="180px" />&nbsp;</td>
-<td align="left"><p>Jinxin Zhou<br /></p>
+<td align="left"><p><a href="https://scholar.google.com/citations?user=XR5CQJcAAAAJ&amp;hl=en">Jinxin Zhou</a><br /></p>
 <p>MS, UMich; BS, HUST<br /></p>
 <ul>
 <li><p>J. Zhou, C. You, X. Li, K. Liu, S. Liu, Q. Qu, and Z. Zhu, &lsquo;&lsquo;Are All Losses Created Equal: A Neural Collapse Perspective," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
@@ -47,7 +61,7 @@ rate = 20%)</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="pic/group/zhen.png" alt="alt text" width="150px" height="180px" />&nbsp;</td>
-<td align="left"><p>Zhen Qin<br /></p>
+<td align="left"><p><a href="https://scholar.google.com/citations?user=de_JaPkAAAAJ&amp;hl=en">Zhen Qin</a><br /></p>
 <p>MS, SEU; BS, LDU<br /></p>
 <ul>
 <li><p>Z. Qin, A. Lidiak, Z. Gong, G. Tang, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.04327">Error Analysis of Tensor-Train Cross Approximation</a>," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
@@ -62,6 +76,17 @@ rate = 20%)</p>
 </li>
 </ul>
 </td></tr></table>
+<h3>Master Students</h3>
+<table class="imgtable"><tr><td>
+<img src="pic/group/shreya.png" alt="alt text" width="150px" height="202px" />&nbsp;</td>
+<td align="left"><p><a href="http://www.jiachenjiang.com/">Shreya Byreddy</a><br /></p>
+<p>BS, OSU<br /></p>
+</td></tr></table>
+<h3>K12 Students</h3>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Jackson Sean</p>
+</div></div>
 <h2>Former Members</h2>
 <h3>Former Master Students</h3>
 <table class="imgtable"><tr><td>
@@ -127,7 +152,7 @@ rate = 20%)</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-17 15:46:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-10 15:45:38 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
