--- a/Publications.html
+++ b/Publications.html
@@ -136,7 +136,11 @@
 </ul>
 <h2>Conference Papers&ndash;Machine Learning</h2>
 <ul>
-<li><p>J. Zhou, C. You, X. Li, K. Liu, S. Liu, Q. Qu, and Z. Zhu, &lsquo;&lsquo;Are All Losses Created Equal: A Neural Collapse Perspective," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
+<li><p>T. Chen, L. Liang, T. Ding, Z. Zhu, and I. Zharkov, &lsquo;&lsquo;<a href="https://openreview.net/pdf?id=7ynoX1ojPMt">OTOv2: Automatic, Generic, User-Friendly</a>," <i>International Conference on Learning Representations (ICLR)</i>, 2023.</p>
+</li>
+</ul>
+<ul>
+<li><p>J. Zhou, C. You, X. Li, K. Liu, S. Liu, Q. Qu, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2210.02192">Are All Losses Created Equal: A Neural Collapse Perspective</a>," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
 </li>
 </ul>
 <ul>
@@ -144,11 +148,11 @@
 </li>
 </ul>
 <ul>
-<li><p>C. Yaras, P. Wang, Z. Zhu, L. Balzano, and Qing Qu, &lsquo;&lsquo;Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
+<li><p>C. Yaras, P. Wang, Z. Zhu, L. Balzano, and Qing Qu, &lsquo;&lsquo;<a href="https://arxiv.org/pdf/2209.09211.pdf">Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold</a>," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
 </li>
 </ul>
 <ul>
-<li><p>X. Dai, M. Li,&hellip;, Z. Zhu, C. You, and Yi Ma, &lsquo;&lsquo;Revisiting Sparse Convolutional Model for Visual Recognition," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
+<li><p>X. Dai, M. Li,&hellip;, Z. Zhu, C. You, and Yi Ma, &lsquo;&lsquo;<a href="https://proceedings.neurips.cc/paper_files/paper/2022/file/4418f6a54f4314202688d77956e731ce-Paper-Conference.pdf">Revisiting Sparse Convolutional Model for Visual Recognition</a>," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
 </li>
 </ul>
 <ul>
@@ -359,7 +363,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-17 15:46:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-10 15:53:19 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
