--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ Phone: <br />
 Email: zhu.3440@osu.edu</p>
 </td></tr></table>
 <p><br /></p>
-<p><b>I am looking for self-motivated students who are interested in  data science, machine learning, and signal processing.</b>	If you are interested in joining my lab, please send me your CV, transcripts, and any other demonstration materials.<br /> </p>
+<p><b><font size=+1 ><b>We are seeking Ph.D. students in Machine Learning, Quantum Information and Computing (welcome candidates from any background, e.g., math/physics).</b></font></b> If you are interested in joining my lab, please apply directly to the CSE department and list me as a faculty of interest. 
+Once you have applied, please send me your CV, transcripts, and any other demonstration materials. I may not respond emails, but I'll look at your application.<br /> </p>
 <p>Our group works on theoretical and computational aspects of data science and machine learning, with a focus on developing efficient methods for extracting useful information from large-scale and high-dimensional data, proving their correctness, and applying them to solving real-world problems. A few current projects include </p>
 <ul>
 <li><p><b>Machine learning</b>: representation learning; generalization properties and implicit regularization; model (neural network) compression; deep neural networks for unsupervised learning and inverse problems;</p>
@@ -47,7 +48,14 @@ Email: zhu.3440@osu.edu</p>
 <li><p><b>Optimization</b>: Nonconvex geometric analysis; distributed optimization; the design, analysis, and implementation of large-scale optimization algorithms for engineering problems.<br /></p>
 </li>
 </ul>
+<p><b><font size=+1 ><b>Call for papers: <a href="https://signalprocessingsociety.org/sites/default/files/uploads/special_issues_deadlines/JSTSP_SI_seeking_low.pdf">IEEE JSTSP Special Issue on Seeking Low-dimensionality in Deep
+Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b></p>
+<p><b><font size=+1 ><b>Call for papers: <a href="https://cpal.cc/">Conference on Parsimony and Learning (CPAL)</a>, January 2024, Hongkong</b></font></b></p>
 <h2>News: </h2>
+<ul>
+<li><p>[Jun 2023] Gave a short course on &lsquo;&lsquo;<a href="https://highdimdata-lowdimmodels-tutorial.github.io/">Learning Nonlinear and Deep Low-Dimensional Representations from High-Dimensional Data: From Theory to Practice</a>" at ICASSP 2023.</p>
+</li>
+</ul>
 <ul>
 <li><p>[Jan 2023] Co-organized and gave a <a href="https://buckeyemailosu-my.sharepoint.com/:b:/g/personal/zhu_3440_osu_edu/ES8L3-DSGThGjIV6FenNXIoBwDI-_SCWdFONoebTie17zA?e=099OWe">tutorail</a> at the 3rd SLowDNN Workshop at MBZUAI, Abu Dhabi, MBZUAI. </p>
 </li>
@@ -198,7 +206,7 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-17 22:44:54 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-10 15:14:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
