--- a/People.html
+++ b/People.html
@@ -79,7 +79,7 @@ rate = 20%)</p>
 <h3>Master Students</h3>
 <table class="imgtable"><tr><td>
 <img src="pic/group/shreya.png" alt="alt text" width="150px" height="202px" />&nbsp;</td>
-<td align="left"><p><a href="http://www.jiachenjiang.com/">Shreya Byreddy</a><br /></p>
+<td align="left"><p>Shreya Byreddy <br /></p>
 <p>BS, OSU<br /></p>
 </td></tr></table>
 <h3>K12 Students</h3>
@@ -87,6 +87,12 @@ rate = 20%)</p>
 <div class="blockcontent">
 <p>Jackson Sean</p>
 </div></div>
+<h2>Visting Students</h2>
+<table class="imgtable"><tr><td>
+<img src="pic/group/xinle.png" alt="alt text" width="150px" height="250px" />&nbsp;</td>
+<td align="left"><p>Xinle Wu <br /></p>
+<p>Aalborg University, Denmarkm</p>
+</td></tr></table>
 <h2>Former Members</h2>
 <h3>Former Master Students</h3>
 <table class="imgtable"><tr><td>
@@ -152,7 +158,7 @@ rate = 20%)</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-10 15:45:38 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-21 11:04:16 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
