--- a/Publications.html
+++ b/Publications.html
@@ -29,6 +29,18 @@
 <p><a href="https://scholar.google.com/citations?user=gmSwszcAAAAJ&amp;hl=zh-CN&amp;oi=sra">My Google Scholar Profile</a></p>
 <h2>Preprints (* indicates equal contribution)</h2>
 <ul>
+<li><p>Z. Qin, C. Jameson, Z. Gong, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2306.09432">Stable Tomography for Structured Quantum States</a>," preprint, 2023.</p>
+</li>
+</ul>
+<ul>
+<li><p>C. Yaras, P. Wang, W. Hu, Z. Zhu, L. Balzano, Q. Qu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2306.01154">The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks</a>," preprint, 2023.</p>
+</li>
+</ul>
+<ul>
+<li><p>X. Li, S. Liu, J. Zhou, X. Lu, C. Fernandez-Granda, Z. Zhu, Q. Qu,&lsquo;&lsquo;<a href="https://arxiv.org/abs/2212.12206">Principled and efficient transfer learning of deep models via neural collapse</a>," preprint, 2023.</p>
+</li>
+</ul>
+<ul>
 <li><p>A. Lidiak, C. Jameson, Z. Qin, G. Tang, M. B. Wakin, Z. Zhu, and Z. Gong, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.06397">Quantum state tomography with tensor train cross approximation</a>,", preprint, 2022.</p>
 </li>
 </ul>
@@ -39,11 +51,15 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
-<li><p>J. Sulam, C. You, and Z. Zhu, &lsquo;&lsquo;<a href="https://www.jmlr.org/papers/volume23/20-1360/20-1360.pdf">Recovery and Generalization in Over-Realized Dictionary Learning</a>," <i>Journal of Machine Learning Research</i>, vol. 23, no. 135, pp. 1-23, 2022.</p>
+<li><p>Z. Zhu and M. B. Wakin, &lsquo;&lsquo;<a href="https://arxiv.org/abs/1711.07956">Time-Limited Toeplitz Operators on Abelian Groups: Applications in Information Theory and Subspace Approximation</a>,&rsquo;&rsquo; <i>Pure and Applied Functional Analysis</i>, vol. 8, no. 2, pp. 775-808, 2023.</p>
 </li>
 </ul>
 <ul>
-<li><p>Z. Zhu and M. B. Wakin, &lsquo;&lsquo;<a href="https://arxiv.org/abs/1711.07956">Time-Limited Toeplitz Operators on Abelian Groups: Applications in Information Theory and Subspace Approximation</a>,&rsquo;&rsquo; to appear in <i>Pure and Applied Functional Analysis</i>.</p>
+<li><p>C. Wang, Z. Gu, and Z. Zhu,&lsquo;&lsquo;<a href="https://ieeexplore.ieee.org/abstract/document/10103709">Seismic Data Reconstruction and Denoising by Enhanced Hankel Low-Rank Matrix Estimation</a>, " IEEE Transactions on Geoscience and Remote Sensing, 2023.</p>
+</li>
+</ul>
+<ul>
+<li><p>J. Sulam, C. You, and Z. Zhu, &lsquo;&lsquo;<a href="https://www.jmlr.org/papers/volume23/20-1360/20-1360.pdf">Recovery and Generalization in Over-Realized Dictionary Learning</a>," <i>Journal of Machine Learning Research</i>, vol. 23, no. 135, pp. 1-23, 2022.</p>
 </li>
 </ul>
 <ul>
@@ -363,7 +379,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-10 15:53:19 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-21 10:54:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
