--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b>
 <p><b><font size=+1 ><b>Call for papers: <a href="https://cpal.cc/">Conference on Parsimony and Learning (CPAL)</a>, January 2024, Hongkong</b></font></b></p>
 <h2>News: </h2>
 <ul>
+<li><p>[Jun 2023] Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2312840&amp;HistoricalAwards=false">collaborative proposal</a> (with Jere at JHU and Qing at UMich) on Deep Neural Collapse has been awarded by NSF!</p>
+</li>
+</ul>
+<ul>
 <li><p>[Jun 2023] Gave a short course on &lsquo;&lsquo;<a href="https://highdimdata-lowdimmodels-tutorial.github.io/">Learning Nonlinear and Deep Low-Dimensional Representations from High-Dimensional Data: From Theory to Practice</a>" at ICASSP 2023.</p>
 </li>
 </ul>
@@ -206,7 +210,7 @@ Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-10 15:14:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-21 10:48:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
