--- a/Publications.html
+++ b/Publications.html
@@ -29,6 +29,27 @@
 <p><a href="https://scholar.google.com/citations?user=gmSwszcAAAAJ&amp;hl=zh-CN&amp;oi=sra">My Google Scholar Profile</a></p>
 <h2>Preprints (* indicates equal contribution)</h2>
 <ul>
+<li><p>T. Ding, T. Chen, H. Zhu, J. Jiang, Y. Zhong, J. Zhou, G. Wang, Z. Zhu, I. Zharkov, and L. Liang, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2312.00678">The Efficiency Spectrum of Large Language Models: An Algorithmic Survey</a>," preprint, 2023.
+<a href="https://github.com/tding1/Efficient-LLM-Survey">github repo</a></p>
+</li>
+</ul>
+<ul>
+<li><p>J. Zhou*, T. Ding*, T. Chen, J. Jiang, I. Zharkov, Z. Zhu, and L. Liang, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2312.00210">DREAM: Diffusion Rectification and Estimation-Adaptive Models</a>," preprint, 2023. <a href="https://www.tianyuding.com/projects/DREAM/">project page</a></p>
+</li>
+</ul>
+<ul>
+<li><p>J. Jiang*, J. Zhou*, P. Wang, Q. Qu, D. Mixon, C. You, Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.05351">Generalized neural collapse for a large number of classes</a>," preprint, 2023.</p>
+</li>
+</ul>
+<ul>
+<li><p>Z. Zhu, J. Lukens, B. Kirby, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.16921">On the connection between least squares, regularization, and classical shadows</a>," preprint, 2023.</p>
+</li>
+</ul>
+<ul>
+<li><p>P. Wang, X. Li, C. Yaras, Z. Zhu, L. Balzano, W. Hu, Q. Qu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2311.02960">Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination</a>," preprint, 2023.</p>
+</li>
+</ul>
+<ul>
 <li><p>Z. Qin, C. Jameson, Z. Gong, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2306.09432">Stable Tomography for Structured Quantum States</a>," preprint, 2023.</p>
 </li>
 </ul>
@@ -151,6 +172,10 @@
 </li>
 </ul>
 <h2>Conference Papers&ndash;Machine Learning</h2>
+<ul>
+<li><p>C Yaras, P Wang, W Hu, Z Zhu, L Balzano, Q Qu, &lsquo;&lsquo;Invariant Low-Dimensional Subspaces in Gradient Descent for Learning Deep Matrix Factorizations," <i>NeurIPS 2023 Workshop on Mathematics of Modern Machine Learning</i>, 2023.</p>
+</li>
+</ul>
 <ul>
 <li><p>T. Chen, L. Liang, T. Ding, Z. Zhu, and I. Zharkov, &lsquo;&lsquo;<a href="https://openreview.net/pdf?id=7ynoX1ojPMt">OTOv2: Automatic, Generic, User-Friendly</a>," <i>International Conference on Learning Representations (ICLR)</i>, 2023.</p>
 </li>
@@ -379,7 +404,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-21 10:54:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-04 11:25:02 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
