--- a/Publications.html
+++ b/Publications.html
@@ -38,15 +38,15 @@
 </li>
 </ul>
 <ul>
-<li><p>J. Jiang*, J. Zhou*, P. Wang, Q. Qu, D. Mixon, C. You, Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.05351">Generalized neural collapse for a large number of classes</a>," preprint, 2023.</p>
+<li><p>J. Jiang*, J. Zhou*, P. Wang, Q. Qu, D. Mixon, C. You, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.05351">Generalized neural collapse for a large number of classes</a>," preprint, 2023.</p>
 </li>
 </ul>
 <ul>
-<li><p>Z. Zhu, J. Lukens, B. Kirby, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.16921">On the connection between least squares, regularization, and classical shadows</a>," preprint, 2023.</p>
+<li><p>Z. Zhu, J. Lukens, and B. Kirby, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.16921">On the connection between least squares, regularization, and classical shadows</a>," preprint, 2023.</p>
 </li>
 </ul>
 <ul>
-<li><p>P. Wang, X. Li, C. Yaras, Z. Zhu, L. Balzano, W. Hu, Q. Qu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2311.02960">Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination</a>," preprint, 2023.</p>
+<li><p>P. Wang, X. Li, C. Yaras, Z. Zhu, L. Balzano, W. Hu, and Q. Qu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2311.02960">Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination</a>," preprint, 2023.</p>
 </li>
 </ul>
 <ul>
@@ -404,7 +404,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-04 11:25:02 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-04 11:27:15 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
