--- a/People.html
+++ b/People.html
@@ -76,6 +76,11 @@ rate = 20%)</p>
 </li>
 </ul>
 </td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="pic/group/xi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
+<td align="left"><p>Xi Chen<br /></p>
+<p>co-advising with <a href="https://aperrault.github.io/">Andrew Perrault</a> <br /></p>
+</td></tr></table>
 <h3>Master Students</h3>
 <table class="imgtable"><tr><td>
 <img src="pic/group/shreya.png" alt="alt text" width="150px" height="202px" />&nbsp;</td>
@@ -91,7 +96,7 @@ rate = 20%)</p>
 <table class="imgtable"><tr><td>
 <img src="pic/group/xinle.png" alt="alt text" width="150px" height="250px" />&nbsp;</td>
 <td align="left"><p>Xinle Wu <br /></p>
-<p>Aalborg University, Denmarkm</p>
+<p>Aalborg University, Denmark <br /></p>
 </td></tr></table>
 <h2>Former Members</h2>
 <h3>Former Master Students</h3>
@@ -158,7 +163,7 @@ rate = 20%)</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-21 11:04:16 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-04 13:18:46 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
