--- a/index.html
+++ b/index.html
@@ -37,21 +37,20 @@ Phone: <br />
 Email: zhu.3440@osu.edu</p>
 </td></tr></table>
 <p><br /></p>
-<p><b><font size=+1 ><b>We are seeking Ph.D. students in Machine Learning, Quantum Information and Computing (welcome candidates from any background, e.g., math/physics).</b></font></b> If you are interested in joining my lab, please apply directly to the CSE department and list me as a faculty of interest. 
-Once you have applied, please send me your CV, transcripts, and any other demonstration materials. I may not respond emails, but I'll look at your application.<br /> </p>
+<p>We are seeking Ph.D. students in Machine Learning (particularly analyses and practical techniques for deep learning, generative models, and LLMs), Signal Processing, and Quantum Information and Computing. Welcome candidates from any background, e.g., EECS, math, physics.</p>
 <p>Our group works on theoretical and computational aspects of data science and machine learning, with a focus on developing efficient methods for extracting useful information from large-scale and high-dimensional data, proving their correctness, and applying them to solving real-world problems. A few current projects include </p>
-<ul>
-<li><p><b>Machine learning</b>: representation learning; generalization properties and implicit regularization; model (neural network) compression; deep neural networks for unsupervised learning and inverse problems;</p>
-</li>
-<li><p><b>Quantum information</b>: statistical and algorithmic aspects of quantum information;</p>
-</li>
-<li><p><b>Optimization</b>: Nonconvex geometric analysis; distributed optimization; the design, analysis, and implementation of large-scale optimization algorithms for engineering problems.<br /></p>
-</li>
-</ul>
 <p><b><font size=+1 ><b>Call for papers: <a href="https://signalprocessingsociety.org/sites/default/files/uploads/special_issues_deadlines/JSTSP_SI_seeking_low.pdf">IEEE JSTSP Special Issue on Seeking Low-dimensionality in Deep
 Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b></p>
 <p><b><font size=+1 ><b>Call for papers: <a href="https://cpal.cc/">Conference on Parsimony and Learning (CPAL)</a>, January 2024, Hongkong</b></font></b></p>
 <h2>News: </h2>
+<ul>
+<li><p>[Dec 2023] Paper release: Check out our survey on techniques for improving the efficiency of LLMs <a href="https://arxiv.org/abs/2312.00678">The Efficiency Spectrum of Large Language Models: An Algorithmic Survey</a>, <a href="https://github.com/tding1/Efficient-LLM-Survey">github repo</a> </p>
+</li>
+</ul>
+<ul>
+<li><p>[Dec 2023] Paper release: <a href="https://arxiv.org/abs/2312.00210">DREAM: Diffusion Rectification and Estimation-Adaptive Models</a>, <a href="https://www.tianyuding.com/projects/DREAM/">project page</a></p>
+</li>
+</ul>
 <ul>
 <li><p>[Jun 2023] Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2312840&amp;HistoricalAwards=false">collaborative proposal</a> (with Jere at JHU and Qing at UMich) on Deep Neural Collapse has been awarded by NSF!</p>
 </li>
@@ -210,7 +209,7 @@ Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-21 10:48:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-10 21:27:30 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
