--- a/Publications.html
+++ b/Publications.html
@@ -29,6 +29,10 @@
 <p><a href="https://scholar.google.com/citations?user=gmSwszcAAAAJ&amp;hl=zh-CN&amp;oi=sra">My Google Scholar Profile</a></p>
 <h2>Preprints (* indicates equal contribution)</h2>
 <ul>
+<li><p>Z. Qin, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.02592">Guaranteed Nonconvex Factorization Approach for Tensor Train Recovery</a>,] preprint, 2024.</p>
+</li>
+</ul>
+<ul>
 <li><p>T. Ding, T. Chen, H. Zhu, J. Jiang, Y. Zhong, J. Zhou, G. Wang, Z. Zhu, I. Zharkov, and L. Liang, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2312.00678">The Efficiency Spectrum of Large Language Models: An Algorithmic Survey</a>," preprint, 2023.
 <a href="https://github.com/tding1/Efficient-LLM-Survey">github repo</a></p>
 </li>
@@ -50,10 +54,6 @@
 </li>
 </ul>
 <ul>
-<li><p>Z. Qin, C. Jameson, Z. Gong, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2306.09432">Stable Tomography for Structured Quantum States</a>," preprint, 2023.</p>
-</li>
-</ul>
-<ul>
 <li><p>C. Yaras, P. Wang, W. Hu, Z. Zhu, L. Balzano, Q. Qu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2306.01154">The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks</a>," preprint, 2023.</p>
 </li>
 </ul>
@@ -71,6 +71,10 @@
 </li>
 </ul>
 <h2>Journal Papers</h2>
+<ul>
+<li><p>Z. Qin, C. Jameson, Z. Gong, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2306.09432">Quantum State Tomography for Matrix Product Density Operators</a>," to appear in <i>IEEE Transactions on Information Theory</i>.</p>
+</li>
+</ul>
 <ul>
 <li><p>Z. Zhu and M. B. Wakin, &lsquo;&lsquo;<a href="https://arxiv.org/abs/1711.07956">Time-Limited Toeplitz Operators on Abelian Groups: Applications in Information Theory and Subspace Approximation</a>,&rsquo;&rsquo; <i>Pure and Applied Functional Analysis</i>, vol. 8, no. 2, pp. 775-808, 2023.</p>
 </li>
@@ -404,7 +408,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-04 11:27:15 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-20 18:57:04 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
