--- a/Publications.html
+++ b/Publications.html
@@ -38,7 +38,7 @@
 </li>
 </ul>
 <ul>
-<li><p>J. Zhou*, T. Ding*, T. Chen, J. Jiang, I. Zharkov, Z. Zhu, and L. Liang, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2312.00210">DREAM: Diffusion Rectification and Estimation-Adaptive Models</a>," preprint, 2023. <a href="https://www.tianyuding.com/projects/DREAM/">project page</a></p>
+<li><p>T. Chen, T. Ding, Z. Zhu, Z. Chen, H. Wu, I. Zharkov, and L. Liang, &lsquo;&lsquo;<a href="https://arxiv.org/pdf/2312.09411.pdf">OTOv3: Automatic Architecture-Agnostic Neural Network Training and Compression from Structured Pruning to Erasing Operators</a>," preprint, 2023.</p>
 </li>
 </ul>
 <ul>
@@ -73,6 +73,10 @@
 <h2>Journal Papers</h2>
 <ul>
 <li><p>Z. Qin, C. Jameson, Z. Gong, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2306.09432">Quantum State Tomography for Matrix Product Density Operators</a>," to appear in <i>IEEE Transactions on Information Theory</i>.</p>
+</li>
+</ul>
+<ul>
+<li><p>Z. Qin, X. Tan, and Z. Zhu, &lsquo;&lsquo;<a href="https://ieeexplore.ieee.org/abstract/document/10461121">Convergence Analysis for Learning Orthonormal Deep Linear Neural Networks</a>," <i>IEEE Signal Processing Letters</i>, vol. 31, pp. 795-799, 2024.</p>
 </li>
 </ul>
 <ul>
@@ -176,6 +180,10 @@
 </li>
 </ul>
 <h2>Conference Papers&ndash;Machine Learning</h2>
+<ul>
+<li><p>J. Zhou*, T. Ding*, T. Chen, J. Jiang, I. Zharkov, Z. Zhu, and L. Liang, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2312.00210">DREAM: Diffusion Rectification and Estimation-Adaptive Models</a>," <i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024. <a href="https://www.tianyuding.com/projects/DREAM/">project page</a></p>
+</li>
+</ul>
 <ul>
 <li><p>C Yaras, P Wang, W Hu, Z Zhu, L Balzano, Q Qu, &lsquo;&lsquo;Invariant Low-Dimensional Subspaces in Gradient Descent for Learning Deep Matrix Factorizations," <i>NeurIPS 2023 Workshop on Mathematics of Modern Machine Learning</i>, 2023.</p>
 </li>
@@ -408,7 +416,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-20 18:57:04 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-09 10:28:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
