--- a/Publications.html
+++ b/Publications.html
@@ -29,7 +29,7 @@
 <p><a href="https://scholar.google.com/citations?user=gmSwszcAAAAJ&amp;hl=zh-CN&amp;oi=sra">My Google Scholar Profile</a></p>
 <h2>Preprints (* indicates equal contribution)</h2>
 <ul>
-<li><p>Z. Qin, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.02592">Guaranteed Nonconvex Factorization Approach for Tensor Train Recovery</a>,] preprint, 2024.</p>
+<li><p>Z. Qin, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.02592">Guaranteed Nonconvex Factorization Approach for Tensor Train Recovery</a>, preprint, 2024.</p>
 </li>
 </ul>
 <ul>
@@ -39,10 +39,6 @@
 </ul>
 <ul>
 <li><p>T. Chen, T. Ding, Z. Zhu, Z. Chen, H. Wu, I. Zharkov, and L. Liang, &lsquo;&lsquo;<a href="https://arxiv.org/pdf/2312.09411.pdf">OTOv3: Automatic Architecture-Agnostic Neural Network Training and Compression from Structured Pruning to Erasing Operators</a>," preprint, 2023.</p>
-</li>
-</ul>
-<ul>
-<li><p>J. Jiang*, J. Zhou*, P. Wang, Q. Qu, D. Mixon, C. You, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.05351">Generalized neural collapse for a large number of classes</a>," preprint, 2023.</p>
 </li>
 </ul>
 <ul>
@@ -58,10 +54,6 @@
 </li>
 </ul>
 <ul>
-<li><p>X. Li, S. Liu, J. Zhou, X. Lu, C. Fernandez-Granda, Z. Zhu, Q. Qu,&lsquo;&lsquo;<a href="https://arxiv.org/abs/2212.12206">Principled and efficient transfer learning of deep models via neural collapse</a>," preprint, 2023.</p>
-</li>
-</ul>
-<ul>
 <li><p>A. Lidiak, C. Jameson, Z. Qin, G. Tang, M. B. Wakin, Z. Zhu, and Z. Gong, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.06397">Quantum state tomography with tensor train cross approximation</a>,", preprint, 2022.</p>
 </li>
 </ul>
@@ -73,6 +65,10 @@
 <h2>Journal Papers</h2>
 <ul>
 <li><p>Z. Qin, C. Jameson, Z. Gong, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2306.09432">Quantum State Tomography for Matrix Product Density Operators</a>," to appear in <i>IEEE Transactions on Information Theory</i>.</p>
+</li>
+</ul>
+<ul>
+<li><p>X. Li, S. Liu, J. Zhou, X. Lu, C. Fernandez-Granda, Z. Zhu, Q. Qu,&lsquo;&lsquo;<a href="https://arxiv.org/abs/2212.12206">Principled and efficient transfer learning of deep models via neural collapse</a>," accepted by <i>Transactions on Machine Learning</i>, 2024.</p>
 </li>
 </ul>
 <ul>
@@ -180,6 +176,14 @@
 </li>
 </ul>
 <h2>Conference Papers&ndash;Machine Learning</h2>
+<ul>
+<li><p>J. Jiang*, J. Zhou*, P. Wang, Q. Qu, D. Mixon, C. You, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.05351">Generalized neural collapse for a large number of classes</a>," <i>International Conference in Machine Learning (ICML)</i>, 2024.</p>
+</li>
+</ul>
+<ul>
+<li><p>Peng Wang, Huikang Liu, Druv Pai, Yaodong Yu, Zhihui Zhu, Qing Qu, and Yi Ma, &lsquo;&lsquo;A Global Geometric Analysis of Maximal Coding Rate Reduction," <i>International Conference in Machine Learning (ICML)</i>, 2024.</p>
+</li>
+</ul>
 <ul>
 <li><p>J. Zhou*, T. Ding*, T. Chen, J. Jiang, I. Zharkov, Z. Zhu, and L. Liang, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2312.00210">DREAM: Diffusion Rectification and Estimation-Adaptive Models</a>," <i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024. <a href="https://www.tianyuding.com/projects/DREAM/">project page</a></p>
 </li>
@@ -416,7 +420,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-09 10:28:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-12 17:45:14 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
