--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@ Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b>
 <p><b><font size=+1 ><b>Call for papers: <a href="https://cpal.cc/">Conference on Parsimony and Learning (CPAL)</a>, January 2024, Hongkong</b></font></b></p>
 <h2>News: </h2>
 <ul>
+<li><p>[May 2024] Two papers accepted to <a href="https://icml.cc/">ICML 2024</a>. </p>
+</li>
+</ul>
+<ul>
+<li><p>[April 2024] Tutorial on “Understanding Deep Representation Learning via Neural Collapse” at ICASSP’24 with <a href="https://web.eecs.umich.edu/~girasole/">Prof. Laura Balzano</a>, <a href="https://peng8wang.github.io/">Dr. Peng Wang</a>, and <a href="https://qingqu.engin.umich.edu/">Prof. Qing Qu</a>. Slides: <a href="https://buckeyemailosu-my.sharepoint.com/:b:/g/personal/zhu_3440_osu_edu/EaeGZDFJlThGr1qba59glhQBigc-laiCyT1PulT-A_o7Nw?e=VV2oDH">Lecture-1</a>, <a href="https://buckeyemailosu-my.sharepoint.com/:b:/g/personal/zhu_3440_osu_edu/ESsTdD6iAAxAhYPBs9mLhYsBl0hNR8A3AboUsFYIpKdZ4A?e=2SkCrH">Lecture-2</a></p>
+</li>
+</ul>
+<ul>
 <li><p>[Dec 2023] Paper release: Check out our survey on techniques for improving the efficiency of LLMs <a href="https://arxiv.org/abs/2312.00678">The Efficiency Spectrum of Large Language Models: An Algorithmic Survey</a>, <a href="https://github.com/tding1/Efficient-LLM-Survey">github repo</a> </p>
 </li>
 </ul>
@@ -76,7 +84,7 @@ Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b>
 </li>
 </ul>
 <ul>
-<li><p>[Sep 2022] Four papers accetped to <a href="https://nips.cc/">NeurIPS 2022</a>. </p>
+<li><p>[Sep 2022] Four papers accepted to <a href="https://nips.cc/">NeurIPS 2022</a>. </p>
 </li>
 </ul>
 <ul>
@@ -104,7 +112,7 @@ Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b>
 </li>
 </ul>
 <ul>
-<li><p>[Oct 2021] Four papers accetped to <a href="https://nips.cc/">NeurIPS 2021</a>. </p>
+<li><p>[Oct 2021] Four papers accepted to <a href="https://nips.cc/">NeurIPS 2021</a>. </p>
 </li>
 </ul>
 <ul>
@@ -209,7 +217,7 @@ Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-10 21:27:30 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-12 17:43:28 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
